# polyfit

./: CMakeLists.txt  LICENSE.txt
include/polyfit/: polyfit.hpp
scripts/: build  clean
src/: demo.cpp  polyfit.cpp
